feat: 添加 vLLM、TLLM 和 SGLang 推理框架实现
- 创建三个独立的推理框架实现：vLLM、TLLM、SGLang
- 每个框架包含完整的 Dockerfile、服务器脚本和客户端测试脚本
- 添加通用的构建脚本 build.sh 支持多平台构建
- 创建详细的使用文档和 API 说明
- 支持模型下载、服务器管理、API 测试等功能
- 所有脚本都具有执行权限，可直接使用

--- a/gpu/inference-vllm/Dockerfile
+++ b/gpu/inference-vllm/Dockerfile
@@ -1,1 +1,28 @@
 FROM vllm/vllm-openai:v0.9.1
+
+# Set working directory
+WORKDIR /workspace
+
+# Install additional dependencies
+RUN pip install --no-cache-dir \
+    requests \
+    numpy \
+    pandas \
+    openai
+
+# Create model directory
+RUN mkdir -p /model
+
+# Set environment variables
+ENV VLLM_MODEL_PATH=/model
+ENV VLLM_SERVER_ARGS="--model /model --host 0.0.0.0 --port 8000"
+
+# Expose vLLM server port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Default command
+CMD ["python", "-m", "vllm.entrypoints.openai.api_server", "--model", "/model", "--host", "0.0.0.0", "--port", "8000"]
