refactor: 移除 Triton 相关内容和更新 TLLM 使用官方镜像
- 移除 gpu/inference-triton 目录及其所有文件
- 更新 build-all.sh 移除 Triton 相关选项和功能
- 更新 TLLM Dockerfile 使用官方镜像 nvcr.io/nvidia/tensorrt-llm/release:0.20.0
- 简化构建脚本，专注于 vLLM、TLLM 和 SGLang 三个框架

--- a/gpu/inference-tllm/Dockerfile
+++ b/gpu/inference-tllm/Dockerfile
@@ -1,19 +1,10 @@
-FROM nvcr.io/nvidia/pytorch:24.01-py3
+FROM nvcr.io/nvidia/tensorrt-llm/release:0.20.0
 
 # Set working directory
 WORKDIR /workspace
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install TLLM and dependencies
+# Install additional dependencies
 RUN pip install --no-cache-dir \
-    tensorrt-llm \
-    transformers \
-    accelerate \
     requests \
     numpy \
     pandas \
