refactor: 移除 stress 相关内容及其 CI 配置
- 删除 gpu/stress 和 npu/stress 目录及文件
- 移除 GitHub Actions 工作流中 stress 镜像构建配置
- 项目结构更简洁，专注于推理和训练

--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -16,20 +16,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image_type: [training, inference, stress]
+        image_type: [training, inference-vllm, inference-tllm, inference-sglang]
         include:
           # - image_type: training
           #   dockerfile: gpu/training/Dockerfile
           #   context: gpu/training
           #   tag: gpu-training
-          - image_type: inference
-            dockerfile: gpu/inference/Dockerfile
-            context: gpu/inference
-            tag: gpu-inference
-          # - image_type: stress
-          #   dockerfile: gpu/stress/Dockerfile
-          #   context: gpu/stress
-          #   tag: gpu-stress
+          - image_type: inference-vllm
+            dockerfile: gpu/inference-vllm/Dockerfile
+            context: gpu/inference-vllm
+            tag: gpu-inference-vllm
+          - image_type: inference-tllm
+            dockerfile: gpu/inference-tllm/Dockerfile
+            context: gpu/inference-tllm
+            tag: gpu-inference-tllm
+          - image_type: inference-sglang
+            dockerfile: gpu/inference-sglang/Dockerfile
+            context: gpu/inference-sglang
+            tag: gpu-inference-sglang
 
     steps:
     - name: Checkout repository
