--- a/gpu/inference-tllm/Dockerfile
+++ b/gpu/inference-tllm/Dockerfile
@@ -12,11 +12,11 @@ RUN pip install --no-cache-dir \
     flask-cors
 
 # Create model directory
-RUN mkdir -p /model
+RUN mkdir -p /data/models
 
 # Set environment variables
-ENV TLLM_MODEL_PATH=/model
-ENV TLLM_SERVER_ARGS="--model /model --host 0.0.0.0 --port 8000"
+ENV TLLM_MODEL_PATH=/data/models
+ENV TLLM_SERVER_ARGS="--model /data/models --host 0.0.0.0 --port 8000"
 
 # Expose TLLM server port
 EXPOSE 8000
