--- a/gpu/inference-vllm/Dockerfile
+++ b/gpu/inference-vllm/Dockerfile
@@ -11,11 +11,11 @@ RUN pip install --no-cache-dir \
     openai
 
 # Create model directory
-RUN mkdir -p /model
+RUN mkdir -p /data/models
 
 # Set environment variables
-ENV VLLM_MODEL_PATH=/model
-ENV VLLM_SERVER_ARGS="--model /model --host 0.0.0.0 --port 8000"
+ENV VLLM_MODEL_PATH=/data/models
+ENV VLLM_SERVER_ARGS="--model /data/models --host 0.0.0.0 --port 8000"
 
 # Expose vLLM server port
 EXPOSE 8000
@@ -25,4 +25,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Default command
-CMD ["python", "-m", "vllm.entrypoints.openai.api_server", "--model", "/model", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "vllm.entrypoints.openai.api_server", "--model", "/data/models", "--host", "0.0.0.0", "--port", "8000"]
