feat: Add model parameter support for NPU inference
- Add --model parameter to bert_mindspore.py with default value /data/models/Qwen3-0.6B-Base
- Update run.sh to support command line arguments and model parameter
- Enhance Dockerfile to support model parameter and use run.sh
- Update config.yaml to use new default model path
- Add comprehensive documentation (README.md, CHANGELOG.md)
- Add test script to verify model parameter functionality
- Improve error handling and user experience

This change allows users to specify custom model paths for NPU inference
benchmarks while maintaining backward compatibility.

--- a/npu/inference/config.yaml
+++ b/npu/inference/config.yaml
@@ -10,7 +10,7 @@ benchmarks:
       enabled: true
       batch_size: 1
       sequence_length: 512
-      model_path: "/models/bert-base-uncased"
+      model_path: "/data/models/Qwen3-0.6B-Base"
       iterations: 1000
 
 metrics:
