--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -2,10 +2,10 @@ name: Build GPU Docker Images
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
     paths:
-      - 'gpu/**'
-      - '.github/workflows/build-gpu-images.yml'
+      - "gpu/**"
+      - ".github/workflows/build-gpu-images.yml"
 
 env:
   REGISTRY: docker.io
@@ -16,12 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image_type: [training, inference-vllm, inference-tllm, inference-sglang]
+        image_type: [inference-vllm, inference-tllm, inference-sglang]
         include:
-          # - image_type: training
-          #   dockerfile: gpu/training/Dockerfile
-          #   context: gpu/training
-          #   tag: gpu-training
+          - image_type: training
+            dockerfile: gpu/training/Dockerfile
+            context: gpu/training
+            tag: gpu-training
           - image_type: inference-vllm
             dockerfile: gpu/inference-vllm/Dockerfile
             context: gpu/inference-vllm
@@ -36,36 +36,35 @@ jobs:
             tag: gpu-inference-sglang
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=raw,value=${{ matrix.tag }}
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ matrix.tag }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ${{ matrix.context }}
-        file: ${{ matrix.dockerfile }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        # platforms: linux/amd64,linux/arm64
-        platforms: linux/amd64
-        push: true
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
+          push: true
