Fix workflow build script path - cd to gpu directory before running build.sh

--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -27,4 +27,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Run build script
-        run: ./gpu/build.sh --all --push
+        run: |
+          cd ./gpu && ./build.sh --all --push
