--- a/gpu/inference-sglang/Dockerfile
+++ b/gpu/inference-sglang/Dockerfile
@@ -1,17 +1,10 @@
-FROM lmsysorg/sglang:v0.4.8-cu126
+FROM lmsysorg/sglang:latest
 
 # Set working directory
 WORKDIR /workspace
 
 # Create model directory
 RUN mkdir -p /data/models
-
-# Set environment variables
-ENV SGLANG_MODEL_PATH=/data/models
-ENV SGLANG_HOST=0.0.0.0
-ENV SGLANG_PORT=8000
-ENV SGLANG_TP=1
-ENV SGLANG_MEM_FRACTION=0.8
 
 # Expose SGLang server port
 EXPOSE 8000
@@ -22,10 +15,10 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
 
 # Default command - directly launch SGLang server
 CMD ["python3", "-m", "sglang.launch_server", \
-     "--model", "${SGLANG_MODEL_PATH}", \
-     "--tp", "${SGLANG_TP}", \
-     "--mem-fraction-static", "${SGLANG_MEM_FRACTION}", \
+     "--model", "/data/models", \
+     "--tp", "1", \
+     "--mem-fraction-static", "0.8", \
      "--trust-remote-code", \
      "--dtype", "bfloat16", \
-     "--host", "${SGLANG_HOST}", \
-     "--port", "${SGLANG_PORT}"] 
+     "--host", "0.0.0.0", \
+     "--port", "8000"] 
