optimize: remove non-essential packages from training image
Removed system dependencies:
- wget (curl is sufficient)
- htop, tmux, vim (development tools not needed for training)

Removed Python packages:
- torchaudio (not needed for vision training)
- matplotlib, tensorboard (visualization tools)
- jupyter, ipython (interactive environments)

Kept essential packages:
- curl, git (downloading and version control)
- torchvision, numpy, tqdm, Pillow (core training dependencies)

This significantly reduces image size while maintaining training functionality.

--- a/gpu/training/Dockerfile
+++ b/gpu/training/Dockerfile
@@ -6,24 +6,15 @@ WORKDIR /workspace
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     curl \
-    wget \
     git \
-    htop \
-    tmux \
-    vim \
     && rm -rf /var/lib/apt/lists/*
 
 # Install additional Python packages
 RUN pip install --no-cache-dir \
     torchvision \
-    torchaudio \
     numpy \
-    matplotlib \
-    tensorboard \
     tqdm \
-    Pillow \
-    jupyter \
-    ipython
+    Pillow
 
 # Create directories
 RUN mkdir -p /data/datasets /data/models /data/logs
