fix: add back tensorboard dependency for training script
The train_resnet50.py script requires tensorboard for logging training metrics:
- Uses SummaryWriter to record train/test loss and accuracy
- Writes logs to tensorboard format for visualization
- Essential for monitoring training progress

This fixes the ModuleNotFoundError: No module named 'tensorboard'

--- a/gpu/training/Dockerfile
+++ b/gpu/training/Dockerfile
@@ -14,7 +14,8 @@ RUN pip install --no-cache-dir \
     torchvision \
     numpy \
     tqdm \
-    Pillow
+    Pillow \
+    tensorboard
 
 # Create directories
 RUN mkdir -p /data/datasets /data/models /data/logs
