--- a/gpu/inference-vllm/Dockerfile
+++ b/gpu/inference-vllm/Dockerfile
@@ -16,5 +16,7 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
+ENTRYPOINT []
+
 # Default command
 CMD ["python", "-m", "vllm.entrypoints.openai.api_server", "--model", "/data/models", "--host", "0.0.0.0", "--port", "8000"]
