--- a/gpu/inference-sglang/Dockerfile
+++ b/gpu/inference-sglang/Dockerfile
@@ -13,6 +13,8 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
+ENTRYPOINT []
+
 # Default command - directly launch SGLang server
 CMD ["python3", "-m", "sglang.launch_server", \
      "--model", "/data/models", \
